# OpenGL_Atmospheric_Scattering

./: .gitignore  CMakeLists.txt  README.md
doc/: pojmy.txt
src/core/: application.cpp  application.hpp  log.hpp  main.cpp  pch.hpp  utilities.cpp  utilities.hpp
src/libs/glad/include/glad/: glad.h
src/libs/glad/src/: glad.c
src/libs/single_header/: stb_image.h  tiny_obj_loader.h
src/opengl/: buffer.cpp  buffer.hpp  shader.cpp  shader.hpp  texture2d.cpp  texture2d.hpp  vertex_array.cpp  vertex_array.hpp
src/scene/: atmosphere.hpp  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  skybox.cpp  skybox.hpp
src/shaders/: draw_atmosphere.frag  draw_atmosphere.fs  draw_atmosphere.vert  draw_atmosphere.vs  draw_mesh.fs  draw_mesh.vert  draw_skybox.fs  draw_skybox.vs
